# gas

./: .gitignore  Cargo.toml  README.md  RELEASE.md  extension.toml
.github/workflows/: goreleaser.yaml
configuration/: default_settings.jsonc  installation_instructions.md
server/: .gitignore  .goreleaser.yml  go.mod  go.sum
server/cmd/github-gas-server/: main.go
server/internal/keyring/: keyring.go
server/internal/log/: log.go
server/internal/mcpserver/: mcpserver.go
server/summarizer/: summarizer.go
src/: lib.rs
